--- a/public/index.html
+++ b/public/index.html
@@ -36,9 +36,7 @@
   <link rel="stylesheet" href="assets/css/style.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Damion&family=Noto+Sans+JP&display=swap" rel="stylesheet">
-  <!-- slick -->
-  <!-- <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick-theme.css"> -->
+
 </head>
 <body>
   <div class="ly_fv hp_100vh">
@@ -95,7 +93,7 @@
 
   <main>
     <div class="ly_main">
-      <div class="ly_top">
+      <div class="ly_top scroll_block">
         <div class="ly_top_wrap">
           <div class="bl_top_about">
             <p><img src="./assets/img/txt_bg/top.png" alt="累計販売台数10万本"></p>
@@ -113,7 +111,7 @@
       <!-- /.top -->
 
 
-      <div class="ly_cv">
+      <div class="ly_cv scroll_block">
         <div class="ly_cv_container">
           <div class="ly_cv_img">
             <img src="./assets/img/cv/cv.png" alt="">
@@ -179,7 +177,7 @@
       <!-- /.cv -->
 
 
-      <section id="distress">
+      <section id="distress" class="scroll_block">
         <h2 class="tab_distress_ttl">こんな<span class="el_txt_gradient">お悩み</span>を<br class="hp_brSp">おもちの方に</h2>
         <nav class="distress_wrap">
           <div class="tab_btn_container">
@@ -234,7 +232,7 @@
       <!--/#distress -->
 
 
-      <section id="influence">
+      <section id="influence" class="scroll_block">
         <h2 class="el_influence_ttl">ビアンの３つの効果</h2>
         <div class="bl_influence_block">
           <div class="bl_influence_flex">
@@ -287,7 +285,7 @@
       <!-- /#influence -->
 
 
-      <div class="ly_cv">
+      <div class="ly_cv scroll_block">
         <div class="ly_cv_container">
           <div class="ly_cv_img">
             <img src="./assets/img/cv/cv.png" alt="">
@@ -352,7 +350,7 @@
       </div>
       <!-- /.cv -->
 
-      <section id="cmponent">
+      <section id="cmponent" class="scroll_block">
         <h2 class="el_cmponent_ttl">成分について</h2>
         <h3 class="el_cmponent_subttl">6つの天然オイルと<br>ビタミンEが<br><span class="el_txt_gradient">高い保湿力の秘密</span></h3>
         <div class="ly_cmponent_wrapper">
@@ -487,7 +485,7 @@
 
 
     <!-- /#cmponent -->
-    <div class="ly_about">
+    <div class="ly_about scroll_block">
       <div class="bl_about_block bl_about_bg1">
         <picture>
           <source media="(min-width: 601px)" srcset="./assets/img/txt_bg/about01.png">
@@ -505,7 +503,7 @@
     </div>
     <!-- /.about -->
 
-    <div class="ly_main">
+    <div class="ly_main scroll_block">
       <section id="how_to_use">
         <h2 class="el_how_ttl">ご使用方法</h2>
         <h3 class="el_how_subttl">新しくなった<br class="hp_brSp">ビアンなら<br><span class="el_txt_gradient">押すだけカンタン！<br class="hp_brSp">鼻バリア</span></h3>
@@ -528,8 +526,8 @@
       <!-- /#how_to_use -->
 
 
-      <section id="questionnaire">
-        <h2 class="el_questionnaire_ttl">お客様アンケー評価</h2>
+      <section id="questionnair" class="scroll_block">
+        <h2 class="el_questionnaire_ttl">お客様アンケート評価</h2>
         <h3 class="el_questionnaire_subttl">ご愛用者に実施した<br class="hp_brSp">アンケートで<br><span class="el_txt_gradient">高い評価を<br class="hp_brSp">獲得しています。</span></h3>
         <div class="questionnaire_container">
           <picture>
@@ -542,7 +540,7 @@
       <!-- /#questionnaire -->
 
 
-      <section id="voice">
+      <section id="voice" class="scroll_block">
         <h2 class="el_voice_ttl">お客様の声</h2>
         <h3 class="el_voice_subttl">たくさんの<br class="hp_brSp">お客様に<br><span class="el_txt_gradient">ご愛用いただいています</span></h3>
         <div class="bl_voice_container">
@@ -556,7 +554,7 @@
       <!-- /#voice -->
 
 
-      <div class="ly_cv">
+      <div class="ly_cv scroll_block">
         <div class="ly_cv_container">
           <div class="ly_cv_img">
             <img src="./assets/img/cv/cv.png" alt="">
@@ -622,7 +620,7 @@
       <!-- /.cv -->
     </div>
 
-    <section id="story" class="bl_story">
+    <section id="story" class="bl_story scroll_block">
       <div class="bl_story_container">
         <div class="bl_story_flex">
           <div class="bl_story_txtBlock">
@@ -651,7 +649,7 @@
     <!-- /#story -->
 
 
-    <div class="ly_main">
+    <div class="ly_main scroll_block">
       <section id="question">
         <h2 class="el_question_ttl">よくある<span class="el_txt_gradient">ご質問</span></h2>
         <div class="ac">
@@ -668,7 +666,7 @@
       <!-- /#question -->
 
 
-      <div class="ly_cv">
+      <div class="ly_cv scroll_block">
         <div class="ly_cv_container">
           <div class="ly_cv_img">
             <img src="./assets/img/cv/cv.png" alt="">
@@ -734,7 +732,7 @@
       <!-- /.cv -->
 
 
-      <div class="recommendation">
+      <div class="recommendation scroll_block">
         <div class="bl_recommendation_flex">
           <p class="el_recommendation_ttl">こんな商品も<br class="hp_brPc"><span class="el_txt_gradient">おすすめ</span></p>
           <div class="el_recommendation_banner"></div>
