footerリンク修正

--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,6 @@
   <link rel="stylesheet" href="assets/css/style.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Damion&family=Noto+Sans+JP&display=swap" rel="stylesheet">
-
 </head>
 <body>
   <div class="ly_fv hp_100vh">
@@ -135,11 +134,11 @@
             <div class="el_cv_imgTab">
               <img src="./assets/img/cv/cv.png" alt="">
             </div>
-            <ul class="bl_cv_listcontainer">
-              <li class="el_cv_list"><span class="el_cv_listInner">無香料</span></li>
-              <li class="el_cv_list"><span class="el_cv_listInner">着色料<br>フリー</span></li>
-              <li class="el_cv_list"><span class="el_cv_listInner">アルコール<br>フリー</span></li>
-              <li class="el_cv_list"><span class="el_cv_listInner">ノンパラペン</span></li>
+            <ul class="bl_listcontainer">
+              <li class="el_list"><span class="el_listInner">無香料</span></li>
+              <li class="el_list"><span class="el_listInner">着色料<br>フリー</span></li>
+              <li class="el_list"><span class="el_listInner">アルコール<br>フリー</span></li>
+              <li class="el_list"><span class="el_listInner">ノンパラペン</span></li>
             </ul>
             <dl class="bl_cv_definition">
               <dt class="el_cv_team">【内容量】</dt>
@@ -413,8 +412,8 @@
 
           <div class="ly_slider">
             <div class="ly_carousel_container">
-              <div class="bl_carousel_rail js_slideRail">
-                <div class="ly_slide_block">
+              <div class="bl_carousel_rail">
+                <div class="ly_slide_bloc ">
                   <dl class="bl_cmponent_list">
                     <dt class="el_cmponent_team">サンフラワー油</dt>
                     <dd class="el_cmponent_discription">紅花の種を圧搾して取れるうすい黄色のオイルです。保湿効果があり軽いテクスチャで皮膚に浸透しやすいのが特徴です。</dd>
@@ -469,14 +468,6 @@
                   </div>
                 </div>
               </div>
-              <nav class="bl_slideNav">
-                <button type="button" class="el_slideNav_btn js_slideNav_btn is_target"></button>
-                <button type="button" class="el_slideNav_btn js_slideNav_btn"></button>
-                <button type="button" class="el_slideNav_btn js_slideNav_btn"></button>
-                <button type="button" class="el_slideNav_btn js_slideNav_btn"></button>
-                <button type="button" class="el_slideNav_btn js_slideNav_btn"></button>
-                <button type="button" class="el_slideNav_btn js_slideNav_btn"></button>
-              </nav>
             </div>
           </div>
         </div>
@@ -750,8 +741,8 @@
   <footer class="ly_footer">
     <p class="el_footer_logo"><img src="./assets/logo/common/logo.svg" alt=""></p>
     <div class="bl_footer_linkFlex">
-      <a class="el_footer_link" href="">お問い合わせはこちら</a>
-      <a class="el_footer_link" href="">レイワメディカルラボ公式サイト</a>
+      <a class="el_footer_link" href="https://reiwa-medilabo.com/contact/">お問い合わせはこちら</a>
+      <a class="el_footer_link" href="https://reiwa-medilabo.com/">レイワメディカルラボ公式サイト</a>
     </div>
     <ul class="bl_footer_btnFlex">
       <li class="el_footer_icon"><a href="https://twitter.com/reiwamedilabo" target="_blank" rel="noopener noreferrer"><img src="./assets/logo/footer/twitter.svg" alt=""></a></li>
@@ -759,7 +750,7 @@
       <li class="el_footer_icon"><a href="https://www.youtube.com/channel/UCWTdG6r9QBClbnVt3Nn3-OQ" target="_blank" rel="noopener noreferrer"><img src="./assets/logo/footer/youtube.svg" alt=""></a></li>
       <li class="el_footer_icon"><a href="https://www.facebook.com/reiwamedilabo" target="_blank" rel="noopener noreferrer"><img src="./assets/logo/footer/facebook.svg" alt=""></a></li>
     </ul>
-    <small class="el_copy">会社概要 ｜ プライバシーポリシー ｜ 特定商取引法に基づく表示</small>
+    <small class="el_copy"><a href="https://reiwa-medilabo.com/company/">会社概要</a> ｜ <a href="https://shop.reiwa-medilabo.com/privacy">プライバシーポリシー</a> ｜ <a href="https://shop.reiwa-medilabo.com/law">特定商取引法に基づく表示</a></small>
   </footer>
   <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
   <script src="assets/js/common.js"></script>
