footerリンク修正

--- a/public/index.html
+++ b/public/index.html
@@ -750,7 +750,7 @@
       <li class="el_footer_icon"><a href="https://www.youtube.com/channel/UCWTdG6r9QBClbnVt3Nn3-OQ" target="_blank" rel="noopener noreferrer"><img src="./assets/logo/footer/youtube.svg" alt=""></a></li>
       <li class="el_footer_icon"><a href="https://www.facebook.com/reiwamedilabo" target="_blank" rel="noopener noreferrer"><img src="./assets/logo/footer/facebook.svg" alt=""></a></li>
     </ul>
-    <small class="el_copy"><a href="https://reiwa-medilabo.com/company/">会社概要</a> ｜ <a href="https://shop.reiwa-medilabo.com/privacy">プライバシーポリシー</a> ｜ <a href="https://shop.reiwa-medilabo.com/law">特定商取引法に基づく表示</a></small>
+    <small class="el_copy"><a class="el_footer_linkTxt" href="https://reiwa-medilabo.com/company/">会社概要</a> ｜ <a class="el_footer_linkTxt" href="https://shop.reiwa-medilabo.com/privacy">プライバシーポリシー</a> ｜ <a class="el_footer_linkTxt" href="https://shop.reiwa-medilabo.com/law">特定商取引法に基づく表示</a></small>
   </footer>
   <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
   <script src="assets/js/common.js"></script>
