distressタイトル修正

--- a/public/index.html
+++ b/public/index.html
@@ -177,7 +177,13 @@
 
 
       <section id="distress" class="scroll_block">
-        <h2 class="tab_distress_ttl">こんな<span class="el_txt_gradient">お悩み</span>を<br class="hp_brSp">おもちの方に</h2>
+        <h2 class="tab_distress_ttl">
+          <picture>
+            <source media="(min-width: 600px)" srcset="./assets/img/title/distress_title.png">
+            <source media="(max-width: 599px)" srcset="./assets/img/title/distress_spttl.png">
+            <img src="./assets/img/title/distress_title.png" alt="こんなお悩みをおもちの方に">
+          </picture>
+        </h2>
         <nav class="distress_wrap">
           <div class="tab_btn_container">
             <button type="button" class="tab_btn js_tab_btn is_tab_current"><span class="tab_btn_img"><img src="./assets/logo/distress/distress_tab01.svg" alt=""></span>鼻炎対策を<br class="hp_brSp">したい<span class="arrow"><img src="./assets/logo/distress/arrow.svg" alt=""></span></button>
