--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
   <link rel="stylesheet" href="assets/css/destyle.css">
   <link rel="stylesheet" href="assets/css/style.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Damion&family=Noto+Sans+JP&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap" rel="stylesheet">
 </head>
 <body>
   <div class="ly_fv hp_100vh">
@@ -523,7 +523,7 @@
       <!-- /#how_to_use -->
 
 
-      <section id="questionnair" class="scroll_block">
+      <section id="questionnaire" class="scroll_block">
         <h2 class="el_questionnaire_ttl">お客様アンケート評価</h2>
         <h3 class="el_questionnaire_subttl">ご愛用者に実施した<br class="hp_brSp">アンケートで<br><span class="el_txt_gradient">高い評価を<br class="hp_brSp">獲得しています。</span></h3>
         <div class="questionnaire_container">
