再プッシュ

--- a/public/index.html
+++ b/public/index.html
@@ -67,7 +67,7 @@
 
 
   <header class="ly_header js_header hp_100vh">
-    <div class="ly_header_inner hp_100vh">
+    <div class="ly_header_inner ly_modal_flex hp_100vh">
       <div class="bl_header_nav">
         <p class="bl_header_logo"><img src="assets/logo/common/logo.svg" alt="ビアン鼻用保湿オイル"></p>
         <nav class="bl_header_container">
@@ -85,6 +85,29 @@
           </ul>
         </nav>
       </div>
+      <div class="ly_header_cv_btn">
+        <a class="el_cv_btnWrap" href="https://shop.reiwa-medilabo.com/items/22264044">
+          <div class="el_cv_btn el_cv_official">
+            <div class="el_cv_btnwrap">
+              <span class="el_cv_official_name">レイワメディカルラボ</span>
+              通販サイトで購入する
+            </div>
+          </div>
+        </a>
+        <a class="el_cv_btnWrap" href="https://www.amazon.co.jp/dp/B08V9WLYK9" target="_blank" rel="noopener noreferrer">
+          <span class="el_cv_btn el_cv_amazon">
+            <img src="./assets/logo/cv/amazon.svg" alt="">
+            で購入する
+          </span>
+        </a>
+        <a class="el_cv_btnWrap" href="" target="_blank" rel="noopener noreferrer">
+          <span class="el_cv_btn el_cv_rakuten">
+            <img src="./assets/logo/cv/rakuten.svg" alt="">
+            で購入する
+          </span>
+        </a>
+      </div>
+
     </div>
   </header>
   <!-- /.header -->
