モーダル画面内修正（閉じるばつ印はまだ）

--- a/public/index.html
+++ b/public/index.html
@@ -66,8 +66,8 @@
   <!-- /.fv -->
 
 
-  <header class="ly_header js_header hp_100vh">
-    <div class="ly_header_inner ly_modal_flex hp_100vh">
+  <header class="ly_header js_header hp_100vh_top">
+    <div class="ly_header_inner ly_modal_flex hp_100vh_top">
       <div class="bl_header_nav">
         <p class="bl_header_logo"><img src="assets/logo/common/logo.svg" alt="ビアン鼻用保湿オイル"></p>
         <nav class="bl_header_container">
@@ -106,8 +106,8 @@
             で購入する
           </span>
         </a>
+        <p class="el_close_btn">閉じる</p>
       </div>
-
     </div>
   </header>
   <!-- /.header -->
