3つの効果point、画像差し替え

--- a/public/index.html
+++ b/public/index.html
@@ -119,7 +119,7 @@
         <div class="ly_top_wrap">
           <div class="bl_top_about">
             <p><img src="./assets/img/txt_bg/top.png" alt="累計販売台数10万本"></p>
-            <p class="el_top_ttl">「鼻バリア」ビアンが<br><span class="el_txt_gradient el_top_under">リニューアルして</span><br class="hp_brTab"><span class="el_txt_clip el_top_under">新登場</span></p>
+            <p class="el_top_ttl"><img src="./assets/img/title/top_ttl.png" alt="「鼻バリア」ビアンがリニューアルして新登場"></p>
             <p class="bl_top_point">リニューアルのポイント</p>
             <ul class="bl_top_pointBlock">
               <li class="el_top_pointList">抗菌ペプチド「キュアペプチン®︎」配合</li>
@@ -261,23 +261,31 @@
 
 
       <section id="influence" class="scroll_block">
-        <h2 class="el_influence_ttl">ビアンの３つの効果</h2>
+        <h2 class="el_influence_ttl"><img src="./assets/img/title/influence_ttl.png" alt="ビアンの3つの効果"></h2>
         <div class="bl_influence_block">
-          <div class="bl_influence_flex">
-            <span class="el_influence_list">ウイルス</span>
-            <span class="el_influence_list">花粉</span>
-          </div>
-          <div class="bl_influence_flex">
-            <span class="el_influence_list">ハウスダスト</span>
-            <span class="el_influence_list">PM2.5</span>
-          </div>
-          <span class="el_influence_span">など</span>
+          <picture>
+            <source media="(min-width: 961px)" srcset="./assets/img/title/influence_list.png">
+            <source media="(max-width: 960px)" srcset="./assets/img/title/influence_spLIst.png">
+            <img src="./assets/img/title/influence_list.png" alt="ウイルス、花粉、ハウスダス、PM2.5など">
+          </picture>
         </div>
-        <h3 class="el_influence_subttl">アレルギーの<br class="hp_brSp">さまざまな原因に<br><span class="el_txt_gradient">「ビアン」の<br class="hp_brSp">3つの効果で鼻炎対策</span></h3>
+        <h3 class="el_influence_subttl">
+          <picture>
+            <source media="(min-width: 600px)" srcset="./assets/img/title/influence_bottom.png">
+            <source media="(max-width: 599px)" srcset="./assets/img/title/influence_spBottom.png">
+            <img src="./assets/img/title/influence_bottom.png" alt="アレルギーのさまざまな原因に「ビアン」の3つの効果で鼻炎対策">
+          </picture>
+        </h3>
         <div class="bl_influence_wrapper">
           <div class="bl_influence_container">
             <div class="bl_influence_txt">
-              <h4 class="el_influence_point_ttl">外敵が<br class="hp_brSp">入らないように、<br>ダイレクトブロック！</h4>
+              <h4 class="el_influence_point_ttl">
+                <picture>
+                  <source media="(min-width: 961px)" srcset="./assets/img/title/influence_point1.png">
+                  <source media="(max-width: 960px)" srcset="./assets/img/title/influence_sppoint1.png">
+                  <img src="./assets/img/title/influence_point1.png" alt="外敵が入らないように、ダイレクトブロック！">
+                </picture>
+              </h4>
               <div class="el_influence_point_txt">
                 <p>鼻炎の症状は、ウイルスや花粉が鼻粘膜に付着することで炎症が起こり発生します。</p>
                 <p>bienは、オイルを鼻の中に塗布することで乾燥を防ぎ、ウイルスやアレルゲンが鼻粘膜に付着すること防止。鼻腔内を高い保湿力で「バリア」することで、外敵の侵入を防ぎます。</p>
@@ -288,7 +296,13 @@
           </div>
           <div class="bl_influence_container">
             <div class="bl_influence_txt">
-              <h4 class="el_influence_point_ttl">キュアペプチンで、<br>入らないように、<br class="hp_brSp">人本来の抗菌力を強化！</h4>
+              <h4 class="el_influence_point_ttl">
+                <picture>
+                  <source media="(min-width: 961px)" srcset="./assets/img/title/influence_point2.png">
+                  <source media="(max-width: 960px)" srcset="./assets/img/title/influence_sppoint2.png">
+                  <img src="./assets/img/title/influence_point2.png" alt="キュアペプチンで、入らないように、人本来の抗菌力を強化！">
+                </picture>
+              </h4>
               <div class="el_influence_point_txt">
                 <p>皮膚には、感染防御の機能を持つ「抗菌ペプチド」が備わっています。</p>
                 <p>bienは、20の天然アミノ酸から醸成した抗菌ペプチド「キュアぺプチン®」を新たに配合。多くの菌に対し強い抗菌作用を持つだけでなく、安全性が高いことが特徴です。</p>
@@ -299,7 +313,13 @@
           </div>
           <div class="bl_influence_container">
             <div class="bl_influence_txt">
-              <h4 class="el_influence_point_ttl">気軽に<br class="hp_brSp">安心して使える！<br>ウイルス予防にも。</h4>
+              <h4 class="el_influence_point_ttl">
+                <picture>
+                  <source media="(min-width: 961px)" srcset="./assets/img/title/influence_point3.png">
+                  <source media="(max-width: 960px)" srcset="./assets/img/title/influence_sppoint3.png">
+                  <img src="./assets/img/title/influence_point3.png" alt="気軽に安心して使える！ウイルス予防にも。">
+                </picture>
+              </h4>
               <div class="el_influence_point_txt">
                 <p>コンパクトだから携帯も簡単。点鼻ノズルがついているから、1秒シュッと噴霧するだけで気軽にケアできます。</p>
                 <p> さらにbienでは、副作用テストやアレルギーテストなどの検証実験を実施して安全性を追求。ナッツオイルを使用していますが、アレルギーの原因タンパク質は含まれていないため安心してお使いいただけます。インフルエンザなどのウィルスや・ハウスダスト・PM2.5などの予防にも最適です。
