--- a/public/index.html
+++ b/public/index.html
@@ -169,7 +169,7 @@
             </dl>
             <dl class="bl_cv_definition">
               <dt class="el_cv_team">【配合成分】</dt>
-              <dd class="el_cv_description">サフラワー油、テリハボク種子油、ヤシ油、トコフェロール、<br>マカデミア種子油、アボガド油、ホホバ種子油、<br>オリゴペプチド-125アミド（機能性ペプチド）</dd>
+              <dd class="el_cv_description">サフラワー油、テリハボク種子油、ヤシ油、<br class="hp_brSp">トコフェロール、<br class="hp_brPc">マカデミア種子油、アボガド油、ホホバ種子油、<br class="hp_brPc">オリゴペプチド-125アミド（機能性ペプチド）</dd>
             </dl>
           </div>
         </div>
@@ -399,8 +399,20 @@
       <!-- /.cv -->
 
       <section id="cmponent" class="scroll_block">
-        <h2 class="el_cmponent_ttl">成分について</h2>
-        <h3 class="el_cmponent_subttl">6つの天然オイルと<br>ビタミンEが<br><span class="el_txt_gradient">高い保湿力の秘密</span></h3>
+        <h2 class="el_cmponent_ttl">
+          <picture>
+            <source media="(min-width: 961px)" srcset="./assets/img/cmponent/cmponet_ttl.png">
+            <source media="(max-width: 960px)" srcset="./assets/img/cmponent/cmponent_spttl.png">
+            <img src="./assets/img/cmponent/cmponet_ttl.png" alt="成分について">
+          </picture>
+        </h2>
+        <h3 class="el_cmponent_subttl">
+          <picture>
+            <source media="(min-width: 961px)" srcset="../assets/img/cmponent/cmponent_subttl.png">
+            <source media="(max-width: 960px)" srcset="./assets/img/cmponent/cmponent_spsubttl.png">
+            <img src="./assets/img/cmponent/cmponent_subttl.png" alt="6つの天然オイルとビタミンEが高い保湿力の秘密">
+          </picture>
+        </h3>
         <div class="ly_cmponent_wrapper">
           <p class="el_cmponent_txt">ビアンに含まれる6つの天然オイル「サフラワー油」「テリハボク種子油」「ヤシ油」「マカデミア種子油」「アボガド油」「ホホバ種子油」「ビタミンE」これらには高い保湿効果があると言われています。</p>
           <div class="ly_cmponent_block">
