使用方法タブボタンフォントウェイト変更

--- a/public/index.html
+++ b/public/index.html
@@ -213,7 +213,7 @@
             <button type="button" class="tab_btn js_tab_btn"><span class="tab_btn_img"><img src="./assets/logo/distress/distress_tab02.svg" alt=""></span>花粉や<br class="hp_brSp">ウィルスを<br class="hp_brSp">予防したい<span class="arrow"><img src="./assets/logo/distress/arrow.svg" alt=""></span></button>
             <button type="button" class="tab_btn js_tab_btn"><span class="tab_btn_img"><img src="./assets/logo/distress/distress_tab03.svg" alt=""></span>お仕事・<br class="hp_brSp">レジャーの<br class="hp_brSp">時に<span class="arrow"><img src="./assets/logo/distress/arrow.svg" alt=""></span></button>
           </div>
-          <div class="tab_menu_container bg_white">
+          <div class="tab_menu_container">
             <div class="tab_menu_box js_tab_menu_box">
               <h3 class="tab_ttl">鼻炎にお困りの方</h3>
               <ul class="tab_menu_flex">
@@ -408,7 +408,7 @@
         </h2>
         <h3 class="el_cmponent_subttl">
           <picture>
-            <source media="(min-width: 961px)" srcset="../assets/img/cmponent/cmponent_subttl.png">
+            <source media="(min-width: 961px)" srcset="./assets/img/cmponent/cmponent_subttl.png">
             <source media="(max-width: 960px)" srcset="./assets/img/cmponent/cmponent_spsubttl.png">
             <img src="./assets/img/cmponent/cmponent_subttl.png" alt="6つの天然オイルとビタミンEが高い保湿力の秘密">
           </picture>
