--- a/public/index.html
+++ b/public/index.html
@@ -557,7 +557,7 @@
 
     <div class="ly_main scroll_block">
       <section id="how_to_use">
-        <h2 class="el_how_ttl">ご使用方法</h2>
+        <h2 class="el_how_ttl"><img src="./assets/img/how_to_use/ttl.png" alt="ご使用方法"></h2>
         <h3 class="el_how_subttl">新しくなった<br class="hp_brSp">ビアンなら<br><span class="el_txt_gradient">押すだけカンタン！<br class="hp_brSp">鼻バリア</span></h3>
         <nav>
           <div class="tab_btn_how_container">
