（再）使用方法タイトル画像化

--- a/public/index.html
+++ b/public/index.html
@@ -558,7 +558,13 @@
     <div class="ly_main scroll_block">
       <section id="how_to_use">
         <h2 class="el_how_ttl"><img src="./assets/img/how_to_use/ttl.png" alt="ご使用方法"></h2>
-        <h3 class="el_how_subttl">新しくなった<br class="hp_brSp">ビアンなら<br><span class="el_txt_gradient">押すだけカンタン！<br class="hp_brSp">鼻バリア</span></h3>
+        <h3 class="el_how_subttl">
+          <picture>
+            <source media="(min-width: 961px)" srcset="./assets/img/how_to_use/subttl.png">
+            <source media="(max-width: 960px)" srcset="./assets/img/how_to_use/subttl_sp.png">
+            <img src="./assets/img/how_to_use/subttl.png" alt="新しくなったビアンなら押すだけカンタン！鼻バリア">
+          </picture>
+        </h3>
         <nav>
           <div class="tab_btn_how_container">
             <button type="button" class="tab_btn_how js_tab_btn is_tab_how_current">点鼻<br class="hp_brSp">ノズルタイプ</button>
