アンケートタイトル画像化

--- a/public/index.html
+++ b/public/index.html
@@ -585,8 +585,14 @@
 
 
       <section id="questionnaire" class="scroll_block">
-        <h2 class="el_questionnaire_ttl">お客様アンケート評価</h2>
-        <h3 class="el_questionnaire_subttl">ご愛用者に実施した<br class="hp_brSp">アンケートで<br><span class="el_txt_gradient">高い評価を<br class="hp_brSp">獲得しています。</span></h3>
+        <h2 class="el_questionnaire_ttl"><img src="./assets/img/questionnaire/ttl.png" alt="お客様アンケート評価"></h2>
+        <h3 class="el_questionnaire_subttl">
+          <picture>
+            <source media="(min-width: 961px)" srcset="./assets/img/questionnaire/ttl_sub.png">
+            <source media="(max-width: 960px)" srcset="./assets/img/questionnaire/ttl_spsub.png">
+            <img src="./assets/img/questionnaire/ttl_sub.png" alt="ご愛用者に実施したアンケートで高い評価を獲得しています。">
+          </picture>
+        </h3>
         <div class="questionnaire_container">
           <picture>
             <source media="(min-width: 600px)" srcset="./assets/img/questionnaire/questionnaire.png">
