voiceタイトル画像化

--- a/public/index.html
+++ b/public/index.html
@@ -605,8 +605,14 @@
 
 
       <section id="voice" class="scroll_block">
-        <h2 class="el_voice_ttl">お客様の声</h2>
-        <h3 class="el_voice_subttl">たくさんの<br class="hp_brSp">お客様に<br><span class="el_txt_gradient">ご愛用いただいています</span></h3>
+        <h2 class="el_voice_ttl"><img src="./assets/img/voice/ttl.png" alt="お客様の声"></h2>
+        <h3 class="el_voice_subttl">
+          <picture>
+            <source media="(min-width: 961px)" srcset="./assets/img/voice/ttl_sub.png">
+            <source media="(max-width: 960px)" srcset="./assets/img/voice/ttl_spsub.png">
+            <img src="./assets/img/voice/ttl_sub.png" alt="たくさんのお客様にご愛用いただいています">
+          </picture>
+        </h3>
         <div class="bl_voice_container">
           <picture>
             <source media="(min-width: 600px)" srcset="./assets/img/voice/voice_pc.png">
