storyタイトル画像化

--- a/public/index.html
+++ b/public/index.html
@@ -694,7 +694,13 @@
       <div class="bl_story_container">
         <div class="bl_story_flex">
           <div class="bl_story_txtBlock">
-            <h2 class="el_story_ttl">ビアン<br class="hp_brSp"><span class="el_txt_gradient">誕生ストーリー</span></h2>
+            <h2 class="el_story_ttl">
+              <picture>
+                <source media="(min-width: 961px)" srcset="./assets/img/story/ttl.png">
+                <source media="(max-width: 960px)" srcset="./assets/img/story/ttl_sp.png">
+                <img src="./assets/img/story/ttl.png" alt="ビアン誕生ストーリー">
+              </picture>
+            </h2>
             <div class="bl_story_paragraph">
               <p>鼻水、鼻づまり、くしゃみなど鼻炎の症状はさまざま。</p>
               <p>そんなさまざまな鼻炎に関するお悩みを解決するためにビアンは生まれました。</p>
