questionタイトル画像化

--- a/public/index.html
+++ b/public/index.html
@@ -727,7 +727,7 @@
 
     <div class="ly_main scroll_block">
       <section id="question">
-        <h2 class="el_question_ttl">よくある<span class="el_txt_gradient">ご質問</span></h2>
+        <h2 class="el_question_ttl"><img src="./assets/img/question/ttl.png" alt="よくあるご質問"></h2>
         <div class="ac">
           <button type="button" class="ac_parent"><span class="ac_parent_circle"><img src="./assets/logo/question/question_circle.svg" alt=""></span>質問のタイトルが入ります。このテキストはダミーです。</button>
           <div class="ac_child">このテキストはダミーです。このテキストはダミーです。このテキストはダミーです。このテキストはダミーです。このテキストはダミーです。このテキストはダミーです。このテキストはダミーです。このテキストはダミーです。このテキストはダミーです。このテキストはダミーです。このテキストはダミーです。このテキストはダミーです。このテキストはダミーです。このテキストはダミーです。このテキストはダミーです。このテキストはダミーです。 </div>
