おすすめフォントウェイト修正

--- a/public/index.html
+++ b/public/index.html
@@ -810,7 +810,7 @@
 
       <div class="recommendation scroll_block">
         <div class="bl_recommendation_flex">
-          <p class="el_recommendation_ttl">こんな商品も<br class="hp_brPc"><span class="el_txt_gradient">おすすめ</span></p>
+          <p class="el_recommendation_ttl">こんな商品も<br class="hp_brPc"><span class="el_recommendation_accent">おすすめ</span></p>
           <div class="el_recommendation_banner"></div>
           <div class="el_recommendation_banner"></div>
         </div>
