--- a/public/index.html
+++ b/public/index.html
@@ -197,6 +197,7 @@
         </div>
       </div>
       <!-- /.cv -->
+      <!-- /.cv -->
 
 
       <section id="distress" class="scroll_block">
@@ -369,7 +370,7 @@
             </dl>
             <dl class="bl_cv_definition">
               <dt class="el_cv_team">【配合成分】</dt>
-              <dd class="el_cv_description">サフラワー油、テリハボク種子油、ヤシ油、トコフェロール、<br>マカデミア種子油、アボガド油、ホホバ種子油、<br>オリゴペプチド-125アミド（機能性ペプチド）</dd>
+              <dd class="el_cv_description">サフラワー油、テリハボク種子油、ヤシ油、<br class="hp_brSp">トコフェロール、<br class="hp_brPc">マカデミア種子油、アボガド油、ホホバ種子油、<br class="hp_brPc">オリゴペプチド-125アミド（機能性ペプチド）</dd>
             </dl>
           </div>
         </div>
@@ -396,6 +397,7 @@
           </a>
         </div>
       </div>
+      <!-- /.cv -->
       <!-- /.cv -->
 
       <section id="cmponent" class="scroll_block">
@@ -660,7 +662,7 @@
             </dl>
             <dl class="bl_cv_definition">
               <dt class="el_cv_team">【配合成分】</dt>
-              <dd class="el_cv_description">サフラワー油、テリハボク種子油、ヤシ油、トコフェロール、<br>マカデミア種子油、アボガド油、ホホバ種子油、<br>オリゴペプチド-125アミド（機能性ペプチド）</dd>
+              <dd class="el_cv_description">サフラワー油、テリハボク種子油、ヤシ油、<br class="hp_brSp">トコフェロール、<br class="hp_brPc">マカデミア種子油、アボガド油、ホホバ種子油、<br class="hp_brPc">オリゴペプチド-125アミド（機能性ペプチド）</dd>
             </dl>
           </div>
         </div>
@@ -687,6 +689,7 @@
           </a>
         </div>
       </div>
+      <!-- /.cv -->
       <!-- /.cv -->
     </div>
 
@@ -778,7 +781,7 @@
             </dl>
             <dl class="bl_cv_definition">
               <dt class="el_cv_team">【配合成分】</dt>
-              <dd class="el_cv_description">サフラワー油、テリハボク種子油、ヤシ油、トコフェロール、<br>マカデミア種子油、アボガド油、ホホバ種子油、<br>オリゴペプチド-125アミド（機能性ペプチド）</dd>
+              <dd class="el_cv_description">サフラワー油、テリハボク種子油、ヤシ油、<br class="hp_brSp">トコフェロール、<br class="hp_brPc">マカデミア種子油、アボガド油、ホホバ種子油、<br class="hp_brPc">オリゴペプチド-125アミド（機能性ペプチド）</dd>
             </dl>
           </div>
         </div>
@@ -805,6 +808,7 @@
           </a>
         </div>
       </div>
+      <!-- /.cv -->
       <!-- /.cv -->
 
 
