--- a/public/index.html
+++ b/public/index.html
@@ -40,6 +40,7 @@
 <body>
   <div class="ly_fv hp_100vh">
     <div class="ly_fvBg hp_100vh">
+      <video class="video" src="./assets/video/bien_0205_A_fullbit.mp4" muted autoplay loop></video>
       <div class="ly_logo">
         <h1 class="bl_logo"><img src="assets/logo/common/logo.svg" alt="ビアン鼻用保湿オイル"></h1>
       </div>
@@ -67,7 +68,7 @@
 
 
   <header class="ly_header js_header hp_100vh_top">
-    <div class="ly_header_inner ly_modal_flex hp_100vh_top">
+    <div class="ly_header_inner ly_modal_flex">
       <div class="bl_header_nav">
         <p class="bl_header_logo"><img src="assets/logo/common/logo.svg" alt="ビアン鼻用保湿オイル"></p>
         <nav class="bl_header_container">
