--- a/public/index.html
+++ b/public/index.html
@@ -119,8 +119,14 @@
       <div class="ly_top scroll_block">
         <div class="ly_top_wrap">
           <div class="bl_top_about">
-            <p><img src="./assets/img/txt_bg/top.png" alt="累計販売台数10万本"></p>
-            <p class="el_top_ttl"><img src="./assets/img/title/top_ttl.png" alt="「鼻バリア」ビアンがリニューアルして新登場"></p>
+            <p class="el_top_about"><img src="./assets/img/txt_bg/top.png" alt="累計販売台数10万本"></p>
+            <p class="el_top_ttl">
+              <picture>
+                <source media="(min-width: 961px)" srcset="./assets/img/title/top_ttl.png">
+                <source media="(max-width: 960px)" srcset="./assets/img/top/ttl_spsub.png">
+                <img src="./assets/img/title/top_ttl.png" alt="「鼻バリア」ビアンがリニューアルして新登場">
+              </picture>
+            </p>
             <p class="bl_top_point">リニューアルのポイント</p>
             <ul class="bl_top_pointBlock">
               <li class="el_top_pointList">抗菌ペプチド「キュアペプチン®︎」配合</li>
