タブ修正（お悩み）

--- a/public/index.html
+++ b/public/index.html
@@ -221,6 +221,7 @@
             <button type="button" class="tab_btn js_tab_btn"><span class="tab_btn_img"><img src="./assets/logo/distress/distress_tab03.svg" alt=""></span>お仕事・<br class="hp_brSp">レジャーの<br class="hp_brSp">時に<span class="arrow"><img src="./assets/logo/distress/arrow.svg" alt=""></span></button>
           </div>
           <div class="tab_menu_container">
+            <!-- メニュー1 -->
             <div class="tab_menu_box js_tab_menu_box">
               <h3 class="tab_ttl">鼻炎にお困りの方</h3>
               <ul class="tab_menu_flex">
@@ -261,6 +262,91 @@
                 </div>
               </div>
             </div>
+            <!-- メニュー1 -->
+            <!-- メニュー2 -->
+            <div class="tab_menu_box js_tab_menu_box">
+              <h3 class="tab_ttl">鼻炎にお困りの方</h3>
+              <ul class="tab_menu_flex">
+                <li class="tab_menu_flexList"><img src="./assets/img/distress/distress1.png" alt="鼻水が垂れる"></li>
+                <li class="tab_menu_flexList"><img src="./assets/img/distress/distress2.png" alt="鼻がつまる"></li>
+                <li class="tab_menu_flexList"><img src="./assets/img/distress/distress3.png" alt="くしゃみが止まらない"></li>
+                <li class="tab_menu_flexList"><img src="./assets/img/distress/distress4.png" alt="寝ている時にいびきをかく"></li>
+              </ul>
+              <div class="tab_menu_reason">
+                <span class="el_borderBox el_border_leftTop"></span>
+                <span class="el_borderBox el_border_leftBottom"></span>
+                <span class="el_borderBox el_border_rightTop"></span>
+                <span class="el_borderBox el_border_rightBottom"></span>
+                <h4 class="tab_subttl">なぜ鼻炎が<br class="hp_brTab">起こるのか？</h4>
+                <p class="tab_menu_innerTxt">鼻炎とは、空気中に浮遊する花粉やハウスダストなどの原因物質「アレルゲン」を吸い込み、<br class="hp_brPc">その成分が鼻の粘膜から体内に入ることによって起こるアレルギー反応です。</p>
+                <div class="tab_menu_logo tab_menu_logoPC">
+                  <p><img src="./assets/logo/distress/distress_logoPc.svg" alt=""></p>
+                  <div class="tab_menu_logoTxt_bg">
+                    <div class="tab_menu_logoTxt">
+                      <p class="tab_menu_list">花粉やハウスダストなどのアレルゲン(抗原)が鼻粘着に付着</p>
+                      <p class="tab_menu_list">アレルゲンがマスト細胞の抗体とくっつく</p>
+                      <p class="tab_menu_list">再びアレルゲンが侵入すると、ヒスタミンなどのアレルギー誘発物質が放出</p>
+                      <p class="tab_menu_list">鼻水、鼻づまり、くしゃみ等のアレルギー反応を起こす</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="tab_menu_logo tab_menu_logoSP">
+                  <img src="./assets/logo/distress/distress_logoSp01.svg" alt="">
+                  <div class="tab_menu_logoSP_flex">
+                    <p class="tab_menu_list">花粉やハウスダストなどのアレルゲン(抗原)が鼻粘着に付着</p>
+                    <p class="tab_menu_list">アレルゲンがマスト細胞の抗体とくっつく</p>
+                  </div>
+                  <img class="hp_mt20" src="./assets/logo/distress/distress_logoSp02.svg" alt="">
+                  <div class="tab_menu_logoSP_flex">
+                    <p class="tab_menu_list">再びアレルゲンが侵入すると、ヒスタミンなどのアレルギー誘発物質が放出</p>
+                    <p class="tab_menu_list">鼻水、鼻づまり、くしゃみ等のアレルギー反応を起こす</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- メニュー2 -->
+            <!-- メニュー3 -->
+            <div class="tab_menu_box js_tab_menu_box">
+              <h3 class="tab_ttl">鼻炎にお困りの方</h3>
+              <ul class="tab_menu_flex">
+                <li class="tab_menu_flexList"><img src="./assets/img/distress/distress1.png" alt="鼻水が垂れる"></li>
+                <li class="tab_menu_flexList"><img src="./assets/img/distress/distress2.png" alt="鼻がつまる"></li>
+                <li class="tab_menu_flexList"><img src="./assets/img/distress/distress3.png" alt="くしゃみが止まらない"></li>
+                <li class="tab_menu_flexList"><img src="./assets/img/distress/distress4.png" alt="寝ている時にいびきをかく"></li>
+              </ul>
+              <div class="tab_menu_reason">
+                <span class="el_borderBox el_border_leftTop"></span>
+                <span class="el_borderBox el_border_leftBottom"></span>
+                <span class="el_borderBox el_border_rightTop"></span>
+                <span class="el_borderBox el_border_rightBottom"></span>
+                <h4 class="tab_subttl">なぜ鼻炎が<br class="hp_brTab">起こるのか？</h4>
+                <p class="tab_menu_innerTxt">鼻炎とは、空気中に浮遊する花粉やハウスダストなどの原因物質「アレルゲン」を吸い込み、<br class="hp_brPc">その成分が鼻の粘膜から体内に入ることによって起こるアレルギー反応です。</p>
+                <div class="tab_menu_logo tab_menu_logoPC">
+                  <p><img src="./assets/logo/distress/distress_logoPc.svg" alt=""></p>
+                  <div class="tab_menu_logoTxt_bg">
+                    <div class="tab_menu_logoTxt">
+                      <p class="tab_menu_list">花粉やハウスダストなどのアレルゲン(抗原)が鼻粘着に付着</p>
+                      <p class="tab_menu_list">アレルゲンがマスト細胞の抗体とくっつく</p>
+                      <p class="tab_menu_list">再びアレルゲンが侵入すると、ヒスタミンなどのアレルギー誘発物質が放出</p>
+                      <p class="tab_menu_list">鼻水、鼻づまり、くしゃみ等のアレルギー反応を起こす</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="tab_menu_logo tab_menu_logoSP">
+                  <img src="./assets/logo/distress/distress_logoSp01.svg" alt="">
+                  <div class="tab_menu_logoSP_flex">
+                    <p class="tab_menu_list">花粉やハウスダストなどのアレルゲン(抗原)が鼻粘着に付着</p>
+                    <p class="tab_menu_list">アレルゲンがマスト細胞の抗体とくっつく</p>
+                  </div>
+                  <img class="hp_mt20" src="./assets/logo/distress/distress_logoSp02.svg" alt="">
+                  <div class="tab_menu_logoSP_flex">
+                    <p class="tab_menu_list">再びアレルゲンが侵入すると、ヒスタミンなどのアレルギー誘発物質が放出</p>
+                    <p class="tab_menu_list">鼻水、鼻づまり、くしゃみ等のアレルギー反応を起こす</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- メニュー3 -->
           </div>
         </nav>
       </section>
