ビアンタイトル修正

--- a/public/index.html
+++ b/public/index.html
@@ -666,6 +666,15 @@
           </div>
         </nav>
         <div class="tab_menu_how_container">
+          <!-- メニュー1 -->
+          <div class="tab_menu_box js_tab_menu_box">
+            <picture>
+              <source media="(min-width: 600px)" srcset="./assets/img/how_to_use/how01.png">
+              <source media="(max-width: 599px)" srcset="./assets/img/how_to_use/how_sp01.png">
+              <img src="./assets/img/how_to_use/how01.png" alt="">
+            </picture>
+          </div>
+          <!-- メニュー2 -->
           <div class="tab_menu_box js_tab_menu_box">
             <picture>
               <source media="(min-width: 600px)" srcset="./assets/img/how_to_use/how01.png">
