鼻炎にお困りの方、タイトル修正

--- a/public/index.html
+++ b/public/index.html
@@ -223,7 +223,7 @@
           <div class="tab_menu_container">
             <!-- メニュー1 -->
             <div class="tab_menu_box js_tab_menu_box">
-              <h3 class="tab_ttl">鼻炎にお困りの方</h3>
+              <h3 class="tab_ttl"><img src="./assets/img/distress/ttl.png" alt="鼻炎にお困りの方"></h3>
               <ul class="tab_menu_flex">
                 <li class="tab_menu_flexList"><img src="./assets/img/distress/distress1.png" alt="鼻水が垂れる"></li>
                 <li class="tab_menu_flexList"><img src="./assets/img/distress/distress2.png" alt="鼻がつまる"></li>
