howの方のタブメニュー 修正

--- a/public/index.html
+++ b/public/index.html
@@ -633,13 +633,13 @@
         </h3>
         <nav>
           <div class="tab_btn_how_container">
-            <button type="button" class="tab_btn_how js_tab_btn is_tab_how_current">点鼻<br class="hp_brSp">ノズルタイプ</button>
-            <button type="button" class="tab_btn_how js_tab_btn">綿棒タイプ</button>
+            <button type="button" class="tab_btn_how is_tab_how_current">点鼻<br class="hp_brSp">ノズルタイプ</button>
+            <button type="button" class="tab_btn_how">綿棒タイプ</button>
           </div>
         </nav>
         <div class="tab_menu_how_container">
           <!-- メニュー1 -->
-          <div class="tab_menu_box js_tab_menu_box">
+          <div class="tab_menuhow_box js_tab_menuhow_box">
             <picture>
               <source media="(min-width: 600px)" srcset="./assets/img/how_to_use/how01.png">
               <source media="(max-width: 599px)" srcset="./assets/img/how_to_use/how_sp01.png">
@@ -647,7 +647,7 @@
             </picture>
           </div>
           <!-- メニュー2 -->
-          <div class="tab_menu_box js_tab_menu_box">
+          <div class="tab_menuhow_box js_tab_menuhow_box">
             <picture>
               <source media="(min-width: 600px)" srcset="./assets/img/how_to_use/how01.png">
               <source media="(max-width: 599px)" srcset="./assets/img/how_to_use/how_sp01.png">
