使用方法を4つに切り分け

--- a/public/index.html
+++ b/public/index.html
@@ -640,11 +640,19 @@
         <div class="tab_menu_how_container">
           <!-- メニュー1 -->
           <div class="tab_menuhow_box js_tab_menuhow_box">
-            <picture>
+            <div class="tab_menuhow_inner">
+              <div class="tab_menuhow_flex">
+                <div class="tab_menuhow_flexItem"><img src="./assets/img/how_to_use/1.png" alt="ビアン本品のフタを取り外し、ノーズスティックを取り付けます。"></div>
+                <div class="tab_menuhow_flexItem"><img src="./assets/img/how_to_use/2.png" alt="人差し指と中指でノズルをはさむように持ち、バーを下にさげ鼻に噴霧します。"></div>
+                <div class="tab_menuhow_flexItem"><img src="./assets/img/how_to_use/3.png" alt="鼻を指で上から押さえ、鼻全体にオイルをなじませてください。ウイルス・花粉・PM2.5の付着を抑制します。"></div>
+              </div>
+            </div>
+            <div class="tab_menuhow_block"><img src="./assets/img/how_to_use/4.png" alt="1日3回を目安にお使いいただくとより効果的です。"></div>
+            <!-- <picture>
               <source media="(min-width: 600px)" srcset="./assets/img/how_to_use/how01.png">
               <source media="(max-width: 599px)" srcset="./assets/img/how_to_use/how_sp01.png">
               <img src="./assets/img/how_to_use/how01.png" alt="">
-            </picture>
+            </picture> -->
           </div>
           <!-- メニュー2 -->
           <div class="tab_menuhow_box js_tab_menuhow_box">
