お客様の声画像切り分け

--- a/public/index.html
+++ b/public/index.html
@@ -697,11 +697,10 @@
           </picture>
         </h3>
         <div class="bl_voice_container">
-          <picture>
-            <source media="(min-width: 600px)" srcset="./assets/img/voice/voice_pc.png">
-            <source media="(max-width: 599px)" srcset="./assets/img/voice/voice_sp.png">
-            <img src="./assets/img/voice/voice_pc.png" alt="">
-          </picture>
+          <div class="el_voice_item"><img src="./assets/img/voice/voice1.png" alt=""></div>
+          <div class="el_voice_item"><img src="./assets/img/voice/voice2.png" alt=""></div>
+          <div class="el_voice_item"><img src="./assets/img/voice/voice3.png" alt=""></div>
+          <div class="el_voice_item"><img src="./assets/img/voice/voice4.png" alt=""></div>
         </div>
       </section>
       <!-- /#voice -->
