動画サイズ修正

--- a/public/index.html
+++ b/public/index.html
@@ -39,30 +39,30 @@
 </head>
 <body>
   <div class="ly_fv hp_100vh">
-    <div class="ly_fvBg hp_100vh">
-      <video class="video" src="./assets/video/bien_0205_A_fullbit.mp4" muted autoplay loop></video>
-      <div class="ly_logo">
-        <h1 class="bl_logo"><img src="assets/logo/common/logo.svg" alt="ビアン鼻用保湿オイル"></h1>
-      </div>
-      <div class="ly_hamburgerbtn">
-        <button type="button" class="bl_hamburgerbtn js_hamburgerbtn">
-          <span class="bl_hamburgerbtn_line js_hamburgerbtn_line"></span>
-        </button>
-      </div>
-      <div class="bl_fv_txt">
-        <picture>
-          <source media="(min-width: 961px)" srcset="./assets/img/txt_bg/fv_pc.png">
-          <source media="(max-width: 960px)" srcset="./assets/img/txt_bg/fv_sp.png">
-          <img src="./assets/img/txt_bg/fv_sp.png" alt="鼻炎・花粉・ウィルス対策の新常識シュッと1秒「鼻バリア」">
-        </picture>
-      </div>
-      <div class="bl_fvcv">
-        <a class="el_fvcv_inner" href="https://shop.reiwa-medilabo.com/items/22264044">
-          <p class="fv_cv_img"><img src="./assets/logo/fv/fv_cv_logo.svg" alt=""></p>
-          <span class="fv_cv_txt">ご購入は<br class="hp_brSp">こちら</span>
-        </a>
-      </div>
+    <!-- <div class="ly_fvBg hp_100vh"> -->
+    <video class="video" src="./assets/video/bien_0205_A_fullbit.mp4" muted autoplay loop></video>
+    <div class="ly_logo">
+      <h1 class="bl_logo"><img src="assets/logo/common/logo.svg" alt="ビアン鼻用保湿オイル"></h1>
     </div>
+    <div class="ly_hamburgerbtn">
+      <button type="button" class="bl_hamburgerbtn js_hamburgerbtn">
+        <span class="bl_hamburgerbtn_line js_hamburgerbtn_line"></span>
+      </button>
+    </div>
+    <div class="bl_fv_txt">
+      <picture>
+        <source media="(min-width: 961px)" srcset="./assets/img/txt_bg/fv_pc.png">
+        <source media="(max-width: 960px)" srcset="./assets/img/txt_bg/fv_sp.png">
+        <img src="./assets/img/txt_bg/fv_sp.png" alt="鼻炎・花粉・ウィルス対策の新常識シュッと1秒「鼻バリア」">
+      </picture>
+    </div>
+    <div class="bl_fvcv">
+      <a class="el_fvcv_inner" href="https://shop.reiwa-medilabo.com/items/22264044">
+        <p class="fv_cv_img"><img src="./assets/logo/fv/fv_cv_logo.svg" alt=""></p>
+        <span class="fv_cv_txt">ご購入は<br class="hp_brSp">こちら</span>
+      </a>
+    </div>
+    <!-- </div> -->
   </div>
   <!-- /.fv -->
 
