--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,7 @@
     <!-- 外部ファイル読み込み -->
     <link rel="stylesheet" href="assets/css/destyle.css">
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/circle.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap" rel="stylesheet">
 
